--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3915,3 +3915,42 @@ input, select, textarea {
 			}
 
 		}
+.resizable-video {
+	width: 48%;
+	height: 315px;
+}
+
+@media screen and (max-width: 1080px) {
+
+	.resizable-video {
+		height: 250px;
+	}
+
+}
+
+@media screen and (max-width: 750px) {
+
+	.resizable-video {
+		width: 100%;
+		height: 400px;
+	}
+
+}
+
+@media screen and (max-width: 650px) {
+
+	.resizable-video {
+		width: 100%;
+		height: 300px;
+	}
+
+}
+
+@media screen and (max-width: 450px) {
+
+	.resizable-video {
+		width: 100%;
+		height: 200px;
+	}
+
+}
