--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3954,3 +3954,21 @@ input, select, textarea {
 	}
 
 }
+
+.rtable {
+	border-collapse: collapse;
+	width: 100%;
+	font-size: 12px;
+	border-width: 0px;
+  }
+  
+  .rth, .rtd {
+	text-align: left;
+	padding: 8px;
+	color: white;
+  }
+  
+  .rtr:nth-child(even) {background-color: #4e3a7e;}
+  #events h6, h5 {
+	  font-size: 1em;
+  }
