--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3972,3 +3972,25 @@ input, select, textarea {
   #events h6, h5 {
 	  font-size: 1em;
   }
+
+  .alert {
+	padding: 20px;
+	background-color: #36b8f4;
+	color: white;
+	
+  }
+  
+  .closebtn {
+	margin-left: 15px;
+	color: white;
+	font-weight: bold;
+	float: right;
+	font-size: 22px;
+	line-height: 28px;
+	cursor: pointer;
+	transition: 0.3s;
+  }
+  
+  .closebtn:hover {
+	color: black;
+  }
